fix: overflow-hidden

--- a/src/scss/components/_about-us.scss
+++ b/src/scss/components/_about-us.scss
@@ -1,61 +1,76 @@
 /* ==================
 	8.1 About Us
 =================== */
-.about-area{
-	.pt-img1{
+.about-area {
+	overflow: hidden;
+
+	.pt-img1 {
 		bottom: 20%;
 		left: 16%;
-		@include respond('laptop-small'){
+
+		@include respond('laptop-small') {
 			left: 100px;
 		}
 	}
-	.pt-img2{		
+
+	.pt-img2 {
 		bottom: 5%;
 		right: 25%;
 	}
-	.pt-img3{
+
+	.pt-img3 {
 		top: 30%;
 		right: 7%;
 	}
-	.pt-img4{
+
+	.pt-img4 {
 		bottom: 10%;
 		right: 1%;
 	}
-	.pt-img5{
+
+	.pt-img5 {
 		top: 25%;
 		left: 5%;
-		@include respond('laptop-small'){
+
+		@include respond('laptop-small') {
 			left: 35px;
 		}
 	}
 }
-.about-thumb-area{
+
+.about-thumb-area {
 	margin-right: 30px;
-    position: relative;
-	ul{
+	position: relative;
+
+	ul {
 		display: flex;
 		flex-wrap: wrap;
 		margin: 0 -20px;
-		li{
+
+		li {
 			display: inline-flex;
 			padding: 0 10px;
 			margin-bottom: 20px;
+
 			&:nth-child(1),
-			&:nth-child(3){
+			&:nth-child(3) {
 				width: 90%;
 			}
+
 			&:nth-child(2),
-			&:nth-child(4){
+			&:nth-child(4) {
 				width: 55%;
 			}
 		}
 	}
-	.about-thumb1{
+
+	.about-thumb1 {
 		border-radius: 0 60px 60px;
 		margin-top: auto;
 		margin-left: auto;
 		width: 100%;
 	}
+
 	// .about-thumb2{
 	// 	border-radius: 60px 0 60px 60px;
 	// 	margin-top: auto;
@@ -66,7 +81,7 @@
 	// 	margin-bottom: auto;
 	// 	margin-left: auto;
 	// }
-	.exp-bx{
+	.exp-bx {
 		background-color: $tertiary;
 		border-radius: 60px 60px 0px 60px;
 		padding: 60px 0px 30px;
@@ -74,88 +89,91 @@
 		line-height: 75px;
 		font-size: 120px;
 		font-weight: 800;
-		position:relative;
+		position: relative;
 		display: block;
 		color: #6a060b;
-		z-index:2;
+		z-index: 2;
 		width: 220px;
-		span{
+
+		span {
 			display: block;
-			font-size:18px;
-			color:#6a060b;
+			font-size: 18px;
+			color: #6a060b;
 		}
-		&:after{
-			content:"";
-			position:absolute;
-			top:10px;
-			left:10px;
-			width:100%;
-			height:100%;
-			border:2px solid #6a060b;
+
+		&:after {
+			content: "";
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			width: 100%;
+			height: 100%;
+			border: 2px solid #6a060b;
 			border-radius: 60px 60px 0px 60px;
-			z-index:-1;
+			z-index: -1;
 		}
 	}
-	// &:after{
-	// 	content: "";
-	// 	position: absolute;
-	// 	top: 49%;
-	// 	left: 40%;
-	// 	width: 50px;
-	// 	height: 50px;
-	// 	background-color: #feffff;
-	// 	//aquijulia
-	// 	border-radius: 15px;
-	// 	transform: rotate(45deg);
-	// }
-	@include respond('tab-land'){
+
+	@include respond('tab-land') {
 		margin-right: 0;
 	}
-	@include respond('tab-port'){
+
+	@include respond('tab-port') {
 		&:after {
 			top: 51%;
 			left: 41%;
 		}
 	}
-	@include respond('phone-land'){
+
+	@include respond('phone-land') {
 		&:after {
 			top: 48%;
 			left: 40%;
 		}
 	}
-	@include respond('phone'){
+
+	@include respond('phone') {
 		margin: 0 15px;
-		ul{
+
+		ul {
 			margin: 0 -10px;
+
 			li {
 				padding: 0 5px;
 				margin-bottom: 10px;
 			}
 		}
+
 		.about-thumb2 {
 			border-radius: 30px 0 30px 30px;
 		}
+
 		.about-thumb3 {
 			border-radius: 30px 30px 30px 0;
 		}
+
 		.about-thumb1 {
 			border-radius: 0 30px 30px;
 		}
+
 		.exp-bx {
 			padding: 50px 0px 20px;
 			border-radius: 30px 30px 0px 30px;
 			line-height: 55px;
 			font-size: 70px;
 			width: 85%;
+
 			&:after {
 				border-radius: 30px 30px 0px 30px;
 				top: 8px;
 				left: 8px;
 			}
+
 			span {
 				font-size: 12px;
 			}
 		}
+
 		&:after {
 			top: 43%;
 			left: 41%;
